# in-place-validation

./: README.md  new-draft.rar
draft-new/: bibfile.bib  draft.aux  draft.bbl  draft.blg  draft.tex
dsaism_plus_checker/: CMakeLists.txt
dsaism_plus_checker/src/: .dsais.h.swo  .dsais.h.swp  CMakeLists.txt  build.cpp  bytestream.h  check.cpp  checker.h  common.h  dsais.h  format.cpp  formatter.h  generate_error.sh  io.h  losertree.h  process.sh  sacheckerlightweight.h  sais.h  substr.h  substr_sorter.h  test.h  tuple.h  tuple_sorter.h  utility.h  ~
new-draft/: bibfile.bib  construction_ct_guten.eps  construction_iov_guten.eps  ct_cmp2_guten.eps  ct_cmp3.eps  draft.aux  draft.bbl  draft.blg  draft.tex  draft.tex.bak  draft.tex.old  draft.tex.sav  example.docx  example2.docx  guten_pdu.eps  iov_cmp2_enwiki.eps  iov_cmp3.eps  iov_with_checker_cmp4.eps  ratio_gap.eps  verification_pdu.eps
new-draft/experiments/: construction_ct_enwiki.eps  (+16 more)
tc-rejected/: bibfile.bib  ct_cmp1.eps  ct_cmp1.fig  ct_cmp2_enwiki.eps  ct_cmp2_enwiki.fig  ct_cmp2_guten.fig  ct_cmp3.fig  ct_with_checker_cmp4.eps  ct_with_checker_cmp4.fig  guten_pdu.fig  iov_cmp1.eps  iov_cmp1.fig  iov_cmp2_enwiki.fig  iov_cmp2_guten.eps  iov_cmp2_guten.fig  iov_cmp3.fig  iov_with_checker_cmp4.fig  paper.aux  paper.bbl  paper.blg  paper.synctex.gz(busy)  paper.tex  pdu_cmp1.eps  pdu_cmp1.fig  pdu_cmp2_enwiki.eps  pdu_cmp2_enwiki.fig  pdu_cmp2_guten.eps  pdu_cmp2_guten.fig  pdu_cmp3.eps  pdu_cmp3.fig  pdu_with_checker_cmp4.eps  pdu_with_checker_cmp4.fig  ratio_gap.fig  simulation_results_matlab.docx
