INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

# add STXXL includes path
INCLUDE_DIRECTORIES(${STXXL_INCLUDE_DIRS})

# formatter
ADD_EXECUTABLE(format format.cpp)
TARGET_LINK_LIBRARIES(format ${STXXL_LIBRARIES})

# checker
ADD_EXECUTABLE(check check.cpp)
TARGET_LINK_LIBRARIES(check ${STXXL_LIBRARIES})

# builder
ADD_EXECUTABLE(build build.cpp) 
TARGET_LINK_LIBRARIES(build ${STXXL_LIBRARIES})


